1999-09-06  Hippo

	* libs/module_interface.c: Fixed dealock with recapture and lockonsend
	modules by ignoring lockonsend flag when server is grabbed.

1999-09-06  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/fvwm2.1 (BugOpts):
	* fvwm/stack.c (inner_RaiseOrLowerWindow):
	* fvwm/move_resize.c (AnimatedMoveAnyWindow):
	(moveLoop):
	* fvwm/fvwm.c (SetMWM_INFO):
	* fvwm/functions.h:
	* fvwm/functions.c (func_config):
	* fvwm/builtins.c (SetBugOptions): New command BugOpts controls
	workarounds for buggy third party programs

	* fvwm/fvwm.h: add check for gcc specific stuff (bug #454)

1999-09-03  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/decorations.c (SelectDecor): applied OL-DECOR fix by Neil Bird

1999-09-03  Dominik Vogt  <dominik_vogt@gmx.de>

	* fvwm/fvwm2.1 (AddToDecor):
	(UseStyle): clarified usage of UseStyle style

1999-09-02  Hippo

	* fvwm/{fvwm.c,screen.h,icons.c} Fixed client supplied icon pixmaps
	with the -visual option and different root/fvwm depths with Exceed
	* fvwm/borders.c: title button pixmaps that are smaller then the title
	height by an odd number are one pixel down (makes win95 styles better)

1999-09-01  Dominik Vogt  <dominik.vogt@gmx.de>

	* **/*: Applied transient handling patches by Mark Rainford.
	Man page and ChangeLog entries are still missing

	* configure.in: changed version to 2.3.8

1999-09-01  Hippo

	* libs/Picture.{c,h}:
	* fvwm/{fvwm,colormaps,menus,move_resize,virtual}.c
	* fvwm/{colormaps,screen,move_resize}.h: Fixed XorPixmap with
	fvwm -visual option.

1999-09-01  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/fvwm2.1:
	* fvwm/move_resize.c (Maximize): implemented negative offsets for
	maximize

1999-09-01  Dominik Vogt  <dominik_vogt@gmx.de>

	* fvwm/menus.c (get_selectable_item_index):
	(get_selectable_item_from_section):
	(get_selectable_item_count):
	(menuShortcuts): Meta-Up/Down move to next separator

1999-08-31  Dominik Vogt  <dominik.vogt@gmx.de>
